--- a/contact.html
+++ b/contact.html
@@ -1,21 +1,3 @@
-<?php
-
-if($_POST["submit"]) {
-    $recipient="your@email.address";
-    $subject="Form to email message";
-    $sender=$_POST["sender"];
-    $senderEmail=$_POST["senderEmail"];
-    $message=$_POST["message"];
-
-    $mailBody="Name: $sender\nEmail: $senderEmail\n\n$message";
-
-    mail($recipient, $subject, $mailBody, "From: $sender <$senderEmail>");
-
-    $thankYou="<p>Thank you! Your message has been sent.</p>";
-}
-
-?>
-
 <!DOCTYPE html>
 <html>
 	<head>
@@ -46,23 +28,16 @@ if($_POST["submit"]) {
 
 <!-- Middle Section -->
 
-<div class="middlesection-compact"
-
-
-    <?=$thankYou ?>
-
-    <form method="post" action="contact.php">
-        <label>Name:</label>
-        <input name="sender">
-
-        <label>Email address:</label>
-        <input name="senderEmail">
-
-        <label>Message:</label>
-        <textarea rows="5" cols="20" name="message"></textarea>
-
-        <input type="submit" name="submit">
-    </form>
+<div class="middlesection-compact">
+<form action="mailto:admin@example.com" enctype="text/plain" method="post">
+<p>Name: <input name="Name" type="text" id="Name" size="40"></p>
+<p>E-mail address: <input name="E-mail" type="text" id="E-mail" size="40"></p>
+<p>Comment:</p>
+<p><textarea name="Comment" cols="55" rows="5"
+id="Comment"></textarea></p>
+<p><input type="submit" name="Submit" value="Submit"></p>
+</form>
+</div>
 
 <!-- End Middle Section -->
 
