--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 <!-- Middle Section -->
 
 <div class="middlesection-compact">
-<form action="mailto:admin@example.com" enctype="text/plain" method="post">
+<form action="mailto:dannyhwangca@gmail.com" enctype="text/plain" method="post">
 <p>Name: <input name="Name" type="text" id="Name" size="40"></p>
 <p>E-mail address: <input name="E-mail" type="text" id="E-mail" size="40"></p>
 <p>Comment:</p>
