--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,9 @@
 <!-- Middle Section -->
 
 <div class="middlesection-compact">
+Email: <a href="mailto:dannyhwangca@gmail.com?Subject=Website Email notice" target="_top">DannyHwangCA@gmail.com</a>
+<br><br>
+
 <form action="mailto:dannyhwangca@gmail.com" enctype="text/plain" method="post">
 <p>Name: <input name="Name" type="text" id="Name" size="40"></p>
 <p>E-mail address: <input name="E-mail" type="text" id="E-mail" size="40"></p>
