--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 <!-- Middle Section -->
 
 <div class="middlesection-compact">
-Email: <a href="mailto:dannyhwangca@gmail.com?Subject=Website Email notice" target="_top">DannyHwangCA@gmail.com</a>
+Contact Email: <a href="mailto:dannyhwangca@gmail.com?Subject=Website Email notice" target="_top">DannyHwangCA@gmail.com</a>
 <br><br>
 
 <form action="mailto:dannyhwangca@gmail.com" enctype="text/plain" method="post">
