--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Contact Me Page</title>
+		<title>About Me</title>
 		<link rel="stylesheet" type="text/css" href="DannyHwangCA.github.io/stylesheets/default.css">
 	</head>
 	<body>
@@ -21,7 +21,7 @@
 <!-- Header Section -->
 	
 	    <div class="header">
-	      	   Contact Information
+	      	   About Me
 	    </div>
 	    
 <!-- Header Section end -->
@@ -32,13 +32,15 @@
 
 <b> About my origins:</b>
 <br>
-I am originally from a small island country called Taiwan. But, at the age of 5, I moved with my parents to San Gabriel USA. So, I’ve spend my whole life in the LA County region.
+I am originally from a small island country called Taiwan. 
+<br>
+But, at the age of 5, I moved with my parents to San Gabriel USA. So, I’ve spend my whole life in the LA County region.
 <br>
 So, if I had to describe myself, I am  just a good old Californian. 
 <br><br>
 <b> My Interests and Hobbies </b>
 <br>
-My main hobby is digital art. I mostly draw fantasy / scifi art for art contests for various videogames. 
+My main hobby is digital art. I mostly draw fantasy / scifi art for art contests. 
 <br> 
 This also led me to be a graphic designer for my previous employers’ websites. 
 <br><br>
