--- a/about.html
+++ b/about.html
@@ -27,6 +27,10 @@
 <!-- Header Section end -->
 
 <!-- Middle Section -->
+<div class = "center-picture">
+	<img src="http://i.imgur.com/Hj006Ga.png">
+</div>
+
 
 <div class="middlesection"
 
