--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 <!-- Header Section end -->
 
 <!-- Middle Section -->
-<div class="middlesection"
+<div class="middlesection">
 
 <div class = "center-picture">
 	<img src="http://i.imgur.com/Hj006Ga.png">
