--- a/about.html
+++ b/about.html
@@ -37,7 +37,8 @@
 <br>
 I am originally from a small island country called Taiwan. 
 <br>
-But, at the age of 5, I moved with my parents to San Gabriel USA. So, I’ve spend my whole life in the LA County region.
+But, at the age of 5, I moved with my parents to San Gabriel USA. 
+<br>So, I’ve spent my whole life in the LA County region.
 <br><br>
 So, if I had to describe myself, I am  just a good old Californian. 
 <br><br>
