--- a/index.html
+++ b/index.html
@@ -102,12 +102,15 @@
 	<div id="social">
 		<div class="container">
 			<div class="row centered">
+				<div class="col-lg-4 col-md-4 col-sm-4">
 					<a href="https://mail.google.com/mail/?view=cm&fs=1&to=DannyHwangCA@gmail.com" target="_blank"> <i class="fa fa-envelope" aria-hidden="true"></i></a>
-
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-4">
 					<a href="https://www.linkedin.com/in/dannyhwangca"><i class="fa fa-linkedin"></i></a>
-
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-4">
 					<a href="https://github.com/DannyHwangCA"><i class="fa fa-github" aria-hidden="true"></i></a>
-			
+				</div>
 			</div>
 		</div>
 	</div>
