Added changes to the pictures

--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
 
 				This is how we come together to create beautiful and meaningful things. </p>
 			</div>
-
 		</div>
 	</div>
 	
@@ -81,19 +80,27 @@
 			<h1>Projects</h1>
 			
 			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
-				<a href="https://youtu.be/OI2wkQTdCrg" target="_blank"><img src="assets/img/portfolio/video.png" class="img-responsive"></a>
+				<a href="https://youtu.be/OI2wkQTdCrg" target="_blank"><img src="assets/img/portfolio/video.png" class="img-responsive img-size"></a>
 			</div>
 
 			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
-				<a href="https://github.com/DannyHwangCA/CycleTheBay" target="_blank"><img src="assets/img/portfolio/CycleTheBay-git.png" class="img-responsive"></a>
+				<a href="https://github.com/DannyHwangCA/CycleTheBay" target="_blank"><img src="assets/img/portfolio/CycleTheBay-git.png" class="img-responsive img-size"></a>
 			</div>
 
 			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
-				<a href="https://lit-waters-72995.herokuapp.com/" target="_blank"><img src="assets/img/portfolio/Master.png" class="img-responsive"></a>
+				<a href="https://lit-waters-72995.herokuapp.com/" target="_blank"><img src="assets/img/portfolio/Master.png" class="img-responsive img-size"></a>
 			</div>
 
 			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
-				<a href="https://github.com/DannyHwangCA/DBC-Store-Ap" target="_blank"><img src="assets/img/portfolio/Master-git.png" class="img-responsive"></a>
+				<a href="https://github.com/DannyHwangCA/DBC-Store-Ap" target="_blank"><img src="assets/img/portfolio/Master-git.png" class="img-responsive img-size"></a>
+			</div>
+
+			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
+				<a href="https://github.com/DannyHwangCA/Javascript-Playground-Intro-Site" target="_blank"><img src="assets/img/portfolio/playground.png" class="img-responsive img-size"></a>
+			</div>
+
+			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
+				<a href="https://github.com/DannyHwangCA/SkillNest" target="_blank"><img src="assets/img/portfolio/skillnest.png" class="img-responsive img-size"></a>
 			</div>
 
 		</div>
