Added Boba Time

--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
 				<a href="https://github.com/DannyHwangCA/SkillNest" target="_blank"><img src="assets/img/portfolio/skillnest.png" class="img-responsive img-size"></a>
 			</div>
 
+			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
+				<a href="https://github.com/DannyHwangCA/Boba" target="_blank"><img src="assets/img/portfolio/skillnest.png" class="img-responsive img-size"></a>
+			</div>
+
 		</div>
 	</div>
 	
