--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 			</div>
 
 			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
-				<a href="https://github.com/DannyHwangCA/Boba" target="_blank"><img src="assets/img/portfolio/skillnest.png" class="img-responsive img-size"></a>
+				<a href="https://geoboba.herokuapp.com/" target="_blank"><img src="assets/img/portfolio/Boba.png" class="img-responsive img-size"></a>
 			</div>
 
 		</div>
