--- a/index.html
+++ b/index.html
@@ -1,150 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Danny Hwang - Web Developer</title>
-
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-  </head>
-
-  <body>
-
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">Home</a>
-          <a class="navbar-brand" href="https://www.linkedin.com/in/dannyhwangca" target="_blank">LinkedIn</a>
-          <a class="navbar-brand" href="https://github.com/DannyHwangCA" target="_blank">Github</a>
-        </div>
-
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-          </ul>
-        </div>
-
-      </div>
-    </div>
-
-
-	<div id="headerwrap">
-
-	    <div class="container">
-			<div class="row">
-				<div class="col-lg-6 col-lg-offset-3">
-					<h4>Welcome</h4>
-					<h1>Danny Hwang</h1>
-					<h4>Web Developer & Software Engineer</h4>
-					<h4> Hello</h4>
-				</div>
-			</div>
-	    </div> 
-
-
-	</div>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Danny Hwang - Web Developer & Frontend Engineer</title>
+</head>
+<body>
 	
-		<div class="container">
-		<div class="row centered mt mb">
-			<div class="col-lg-8 col-lg-offset-2">
-				<a href="https://www.linkedin.com/in/dannyhwangca" target="_blank">
-				<img src="assets/img/portrait.gif">
-				</a>
-				<h1>About Me</h1>
-				<h3>Danny Hwang - Web Developer</h3>
-				<p>The creation of beautiful, meaningful, and functional things has always been my ideal. I seek a part in the next profound idea and a stage with like-minded individuals who embrace the challenges they face. I value constant learning through experimentation, discipline, and collaboration. </p>
-				<p>I understand the value of hard work. My parents are my inspiration, and they worked hard to keep my family afloat. When necessities arise and you need someone at your side, I want to be that person who sees a task through to fruition.  </p>
-				<p>I love solving problems. Finding solutions and setting goals to reach those solutions is empowering. When you are confronted with a problem, what do you do? Don't wither. Don't run. Become intrigued in the problem itself. Become fascinated in the possible solutions.</p>
-				<p>Actionable. Kind. Specific. 
-
-				Being a part of a community's culture is as important as being an actionable member of that community. Being kind to each other and empathetic to our needs. Being specific in our goals and focused on our tasks. 
-
-				This is how we come together to create beautiful and meaningful things. </p>
-			</div>
-		</div>
-	</div>
-	
-	<section id="works"></section>
-	<div class="container">
-		<div class="row centered mt mb">
-			<h1>Projects</h1>
+	<div class="master-outer-container">
+		<div class="master-inner-container">
 			
-			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
-				<a href="https://youtu.be/OI2wkQTdCrg" target="_blank"><img src="assets/img/portfolio/video.png" class="img-responsive img-size"></a>
-			</div>
-
-			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
-				<a href="https://github.com/DannyHwangCA/CycleTheBay" target="_blank"><img src="assets/img/portfolio/CycleTheBay-git.png" class="img-responsive img-size"></a>
-			</div>
-
-			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
-				<a href="https://lit-waters-72995.herokuapp.com/" target="_blank"><img src="assets/img/portfolio/Master.png" class="img-responsive img-size"></a>
-			</div>
-
-			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
-				<a href="https://github.com/DannyHwangCA/DBC-Store-Ap" target="_blank"><img src="assets/img/portfolio/Master-git.png" class="img-responsive img-size"></a>
-			</div>
-
-			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
-				<a href="https://github.com/DannyHwangCA/Javascript-Playground-Intro-Site" target="_blank"><img src="assets/img/portfolio/playground.png" class="img-responsive img-size"></a>
-			</div>
-
-			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
-				<a href="https://github.com/DannyHwangCA/SkillNest" target="_blank"><img src="assets/img/portfolio/skillnest.png" class="img-responsive img-size"></a>
-			</div>
-
-			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
-				<a href="https://geoboba.herokuapp.com/" target="_blank"><img src="assets/img/portfolio/Boba.png" class="img-responsive img-size"></a>
-			</div>
-
 		</div>
 	</div>
 	
-	<div id="social">
-		<div class="container">
-			<div class="row centered">
-				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="https://mail.google.com/mail/?view=cm&fs=1&to=DannyHwangCA@gmail.com" target="_blank"> <i class="fa fa-envelope" aria-hidden="true"></i></a>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="https://www.linkedin.com/in/dannyhwangca"><i class="fa fa-linkedin"></i></a>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="https://github.com/DannyHwangCA"><i class="fa fa-github" aria-hidden="true"></i></a>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div id="footerwrap">
-		<div class="container">
-			<div class="row centered">
-				<div class="col-lg-4">
-					<p><b>Danny Hwang</b></p>
-				</div>
-			
-				<div class="col-lg-4">
-					<p>Web Developer & Software Engineer</p>
-				</div>
-				<div class="col-lg-4">
-					<p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=DannyHwangCA@gmail.com" target="_blank">DannyHwangCA@gmail.com</a></p>
-				</div>
-			</div>
-		</div>
-	</div><! --/footerwrap -->
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-  </body>
+</body>
 </html>
