--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Danny Hwang - Web Developer & Frontend Engineer</title>
+	<link rel="index.css">
 </head>
 <body>
 	
 	<div class="master-outer-container">
 		<div class="master-inner-container">
-			
+			<nav>
+				<button>
+					Home
+				</button>
+				<button>
+					About
+				</button>
+				<button>
+					Projects
+				</button>
+			</nav>
 		</div>
 	</div>
 	
