--- a/index.html
+++ b/index.html
@@ -4,23 +4,32 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Danny Hwang - Web Developer & Frontend Engineer</title>
-	<link rel="index.css">
+	<link rel="./index.css">
 </head>
 <body>
 	
 	<div class="master-outer-container">
 		<div class="master-inner-container">
 			<nav>
-				<button>
+				<div class="nav-container">
 					Home
-				</button>
-				<button>
+				</div>
+				<div class="nav-container"> 
 					About
-				</button>
-				<button>
+				</div>
+				<div class="nav-container">
 					Projects
-				</button>
+				</div>
 			</nav>
+			<div class="home-container">
+				
+			</div>
+			<div class="about-container">
+
+			</div>
+			<div class="project-container">
+
+			</div>
 		</div>
 	</div>
 	
