--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Danny Hwang - Web Developer & Frontend Engineer</title>
-	<link rel="./index.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
 	
 	<div class="master-outer-container">
 		<div class="master-inner-container">
 			<nav>
-				<div class="nav-container">
+				<button class="nav-container">
 					Home
-				</div>
-				<div class="nav-container"> 
+				</button>
+				<button class="nav-container"> 
 					About
-				</div>
-				<div class="nav-container">
+				</button>
+				<button class="nav-container">
 					Projects
-				</div>
+				</button>
 			</nav>
 			<div class="home-container">
 				
