--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 	<div class="master-outer-container">
 		
 		<div class="master-inner-container">
-			<div class="home-container">
+			<div id="stage" class="home-container">
 				
 			</div>
-			<div class="about-container">
+			<div  class="about-container">
 
 			</div>
-			<div class="project-container">
+			<div  class="project-container">
 
 			</div>
 		</div>
@@ -41,12 +41,31 @@
 		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
 		crossorigin="anonymous">
 	</script>
-	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
 	<script>
 		$(document).ready(function(){
 			console.log("Jquery ready");
-			var tl = gsap.timeline();
-			tl.to(".nav-container", {y: 0, opacity:1, stagger: 0.1, duration: 1});
+			var tStart = gsap.timeline();
+			tStart.to(".nav-container", {y: 0, opacity:1, stagger: 0.1, duration: 1});
+
+			tFirst = gsap.timeline();
+			tFirst.to("nav", {backgroundColor: "white", duration: 0.25});
+
+			var controller = new ScrollMagic.Controller();
+			var scene = new ScrollMagic.Scene({
+  				triggerElement: "#stage",
+  				triggerHook: 0
+			})
+  			.addIndicators({
+				colorTrigger: "white",
+				colorStart: "white",
+				colorEnd: "white",
+				indent: 5
+			})
+			.setTween(tFirst)
+			.addTo(controller);
 		})
 	</script>
 </html>
