flex cs to home container

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 		<div class="master-inner-container">
 			<div id="first" class="home-container">
 				<div class="left-home-container">
-					<img src="images/danny-hwang.jpg">
+					<div>
+						<img src="images/danny-hwang.jpg">
+					</div>
+						
 					<h3>Danny Hwang</h3>
 					<h4>Web Developer</h4>
 					<h4>Frontend Engineer</h4>
