--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
 		<div class="master-inner-container">
 			<div id="first" class="home-container">
 				<div class="left-home-container">
-					<div>
+					<div class="profile-image-container">
 						<img src="images/danny-hwang.jpg">
 					</div>
-						
 					<h3>Danny Hwang</h3>
 					<h4>Web Developer</h4>
 					<h4>Frontend Engineer</h4>
