changed id of main containers

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 	<div class="master-outer-container">
 		
 		<div class="master-inner-container">
-			<div id="first" class="home-container">
+			<div id="home" class="home-container">
 				
 			</div>
-			<div  class="about-container">
+			
+			<div id="about" class="about-container">
 				<div class="left-about-container">
 					<div class="profile-image-container">
 						<img src="images/danny-hwang.jpg">
@@ -65,14 +66,10 @@
 					</p>
 				</div>
 			</div>
-			<div  class="project-container">
+
+			<div id="project" class="project-container">
 
 			</div>
-
-			<div  class="page-info-container">
-				<a href="https://www.freepik.com/free-photos-vectors/design">Some Art from www.freepik.com</a>
-			</div>
-
 			
 		</div>
 	</div>
