--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 		<div class="master-inner-container">
 			<div id="home" class="home-container">
 				<div class="home-bg-container" id="nav-trigger"></div>
+				<div class="home-plane-object">
+					<img src="images/ufo.png">
+				</div>
 				<div class="main-home-container">
 					<div class="profile-home-image-container">
 						<img src="images/danny-hwang.jpg">
@@ -108,7 +111,9 @@
 				.to(".main-home-container", {padding: "15px 25px", borderRadius: "10px", backgroundColor: "#8b9dc3", color: "white",  duration: 0.5})
 				.to(".home-container", {height: "auto", duration: 0.5}, "<")
 				.to(".home-bg-container", {opacity: 1, height: "100%", duration: 0.5}, ">")
-
+				.to(".home-plane-object", {rotation: -10, yoyo: true, ease: "power0", repeat: -1, duration: 1}, ">")
+				.to(".home-plane-object", {opacity: 1, duration:2}, "<")
+				.to(".home-plane-object", { left: "90%", duration: 4, ease: "power0", yoyo: true, repeat: -1}, "<")
 			tFirst = gsap.timeline();
 			tFirst
 				.to(".nav-button-container", {color: "#dfe3ee", duration: 0.1})
