--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 					<div class="profile-home-image-container">
 						<img src="images/danny-hwang.jpg">
 					</div>
-					<h3>Danny Hwang</h3>
-					<h4>Web Developer</h4>
-					<h4>Frontend Engineer</h4>
-					<h4>Passionate Coder</h4>
+					<h3 id="home-title"></h3>
+					<h4 id="home-sub-title-1"></h4>
+					<h4 id="home-sub-title-2"></h4>
+					<h4 id="home-sub-title-3"></h4>
 				</div>
 			</div>
 
@@ -102,6 +102,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/TextPlugin.min.js"></script>
+	
 	<script>
 		$(document).ready(function(){
 
@@ -111,8 +113,10 @@
 				.to(".profile-home-image-container", {y: 0, opacity: 1, duration: 0.5}, "<")
 				.to(".profile-home-image-container img", {y: 0, opacity: 1, borderWidth: 10, borderColor: "#3b5998", ease: "Back.easeInOut", duration: 1}, "<")
 				.to(".home-text-container p", {x:0, opacity: 1, duration: 0.25, stagger: 0.1}, "<")
-				.to(".main-home-container h3", {opacity: 1, duration: 0.25})
-				.to(".main-home-container h4", {opacity: 1, stagger: 0.25, duration: 0.5})
+				.to("#home-title", 0.5, {opacity: 1, text:"Danny Hwang"})
+				.to("#home-sub-title-1", 0.5, {opacity: 1, text:"Web Developer"})
+				.to("#home-sub-title-2", 0.5, {opacity: 1, text:"Frontend Engineer"})
+				.to("#home-sub-title-3", 0.5, {opacity: 1, text:"Passionate Coder"})
 				.to(".main-home-container", {padding: "15px 25px", borderRadius: "10px", backgroundColor: "#8b9dc3", color: "white",  duration: 0.5})
 				.to(".home-container", {height: "auto", duration: 0.5}, "<")
 				.to(".home-bg-container", {opacity: 1, height: "100%", duration: 0.5}, ">")
@@ -124,7 +128,8 @@
 				.to("#cloud-2", { top: "22%", duration: 0.5, ease: "power0", yoyo: true, repeat: -1}, "<")
 				.to("#cloud-3", { top: "32%", duration: 0.5, ease: "power0", yoyo: true, repeat: -1}, "<")
 				.to("#cloud-4", { left: "0%", duration: 10, ease: "power0", yoyo: true, repeat: -1}, "<")
-				.to("#cloud-5", { top: "1%", duration: 0.5, ease: "power0", yoyo: true, repeat: -1}, "<")
+				.to("#cloud-5", { top: "1%", duration: 0.5, ease: "power0", yoyo: true, repeat: -1}, "<");
+
 
 			tNav = gsap.timeline();
 			tNav
